<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sdpm.feedly.feedly.SignUpActivity">

    <TextView

        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/sign_up_to_feedly_message"
        android:layout_marginTop="38dp"
        android:id="@id/sign_up_message"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/full_name"
        android:textAlignment="center"
        android:background="@drawable/edittextbackground"
        android:layout_marginTop="20dp"
        android:layout_below="@id/sign_up_message"
        android:layout_alignStart="@id/sign_up_message"
        android:layout_alignEnd="@id/sign_up_message" />

    <EditText
        android:id="@id/email_id"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/email_id"
        android:textAlignment="center"
        android:background="@drawable/edittextbackground"
        android:layout_marginTop="0.60dp"
        android:layout_below="@+id/full_name"
        android:layout_alignStart="@+id/full_name"
        android:layout_alignEnd="@+id/full_name" />

    <EditText
        android:id="@id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:background="@drawable/edittextbackground"
        android:layout_below="@+id/email_id"
        android:layout_alignStart="@+id/email_id"
        android:layout_alignEnd="@+id/email_id" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/button_create_account"
        android:background="@color/feedly_grren"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_alignStart="@+id/password" />

</RelativeLayout>

