<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sdpm.feedly.feedly.LoginActivity">

    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/login_to_feedly_message"
        android:layout_marginTop="38dp"
        android:id="@+id/login_textView"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/email_id"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignEnd="@id/login_textView"
        android:layout_alignStart="@id/login_textView"
        android:layout_below="@id/login_textView"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittextbackground"
        android:hint="User ID"
        android:inputType="text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:layout_below="@+id/email_id"
        android:textAlignment="center"
        android:background="@drawable/edittextbackground"
        android:layout_marginTop="0.5dp"
        android:layout_alignEnd="@+id/email_id"
        android:layout_alignStart="@+id/email_id" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/button_login"
        android:background="@color/feedly_grren"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_alignStart="@+id/password" />

    <TextView
        android:id="@+id/sign_up_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_message"
        android:layout_below="@+id/button_login"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/button_sign_up"
        android:layout_below="@id/sign_up_message"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="Settings"
        android:layout_below="@id/button_sign_up"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>

