<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sdpm.feedly.feedly.ChangePasswordActivity">

    <TextView
        android:id="@+id/tv_oldPassword"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/tv_old_password"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/et_oldPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:background="@drawable/edittextbackground"
        android:textAlignment="center"
        android:layout_alignStart="@+id/tv_oldPassword"
        android:layout_below="@+id/tv_oldPassword" />

    <TextView
        android:id="@+id/tv_newPassword"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_alignStart="@+id/et_oldPassword"
        android:layout_below="@+id/et_oldPassword"
        android:layout_marginTop="10dp"
        android:text="@string/tv_new_password"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/et_newPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:background="@drawable/edittextbackground"
        android:textAlignment="center"
        android:layout_alignStart="@+id/tv_newPassword"
        android:layout_below="@+id/tv_newPassword" />

    <TextView
        android:id="@+id/tv_confirmPassword"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_alignStart="@+id/et_newPassword"
        android:layout_below="@+id/et_newPassword"
        android:layout_marginTop="10dp"
        android:text="@string/tv_confirm_password"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/et_confirmPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:background="@drawable/edittextbackground"
        android:textAlignment="center"
        android:layout_alignStart="@+id/tv_confirmPassword"
        android:layout_below="@+id/tv_confirmPassword" />

    <Button
        android:id="@+id/button_updatePassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/feedly_grren"
        android:layout_below="@+id/et_confirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/b_update_password" />

</RelativeLayout>
