<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?pageBackground"
    tools:context="com.sdpm.feedly.feedly.SettingsActivity">

    <TextView
        android:id="@+id/tv_theme"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:text="@string/tv_theme"
        style="?blackText"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        tools:ignore="RtlSymmetry" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:id="@+id/line1"
        android:visibility="visible"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_theme"
        android:background="@android:color/black"/>


    <TextView
        android:id="@+id/tv_defaultView"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_theme"
        android:text="@string/tv_default_view"
        style="?blackText"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        tools:ignore="RtlSymmetry" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:id="@+id/line2"
        android:visibility="visible"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_defaultView"
        android:background="@android:color/black"/>

    <TextView
        android:id="@+id/tv_changePassword"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_defaultView"
        android:text="@string/tv_change_password"
        style="?blackText"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        tools:ignore="RtlSymmetry" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:id="@+id/line3"
        android:visibility="visible"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_changePassword"
        android:background="@android:color/black"/>


</RelativeLayout>
